manager/templates/default/css/index.css
/* ... */
.modx-pb-view-ct .x-view-selected span{
    color: #1A4D8F;
}
.modx-pb-view-ct .loading-indicator {
    font-size: 11px;
    background-repeat: no-repeat;
    background-position: left;
    padding-left: 20px;
    margin: 10px;
}

.modx-pb-detail-thumb {
    margin-top: 5px;
    text-align: center;
    cursor: pointer;
}

.modx-pb-details-info {
    border-top: 1px solid #cccccc;
    font: 11px Arial, Helvetica, sans-serif;
    padding: 5px;
    margin-top: 5px;
    text-align: left;
}
.modx-pb-details-info b {
    color: #555555;
    display: block;
    margin-bottom: 4px;
}
.modx-pb-details-info span{
    display: block;
    margin-bottom: 5px;
    margin-left: 5px;
}
.modx-pb-fullview {
    text-align: center;
}

.package-readme { padding: 8px 11px 0px; }
.x-grid3-row-body p { padding: 2px !important; }

.package-installed {
    opacity: .5;
    color: gray;
}
#modx-grid-package .green { text-align: center; }
#modx-grid-package .green a{ color: red !important; }
#modx-grid-package .red { color: green !important; text-align: center; }


.pbr-provider-box {
    width: 250px;
    float: left;
    margin-top: 10px;
}
.pbr-provider-home {
    padding: 10px;
}
.pbr-repository-view {
    padding: 10px;
}
.pbr-tag-view {
    padding: 10px;
}
.pbr-details-right { float: right !important; text-align: right !important; }
.pbr-thumb-downloaded {
    opacity: .5;
}

.pbr-thumb{
    background: #dddddd;
    height: 80px;
    width: 100px;
    padding: 3px;
}
.pbr-thumb img{
    height: 80px;
    width: 100px;
}


/* top navbar */
#modx-home-icon:hover {
    opacity: 1;
}

#modx-home-icon a {
    width: 100%;
    height: 100%;
    display: block;
}

#modx-topnav-div {
    background: transparent;
    margin-left: 8px;
    position: relative;
    width: 78%;
    z-index: 20;
}
#modx-topnav {
    width: 100%;
    float: left;
    font-size: 13px;
    font-weight: bold;
    height: 45px;
    list-style: none;
    margin: 0;
    padding: 0;
    border-bottom: 1px solid #1E1E1E;
    z-index: 21;
}
#modx-topnav li {
    float: left;
    margin: 0;
    padding:4px 13px 0;
    position: relative;
    background: transparent url("../images/style/separator/menu_sep.png") no-repeat scroll right 0;
    z-index: 22;
}
#modx-topnav li a {
    padding: 12px 5px 13px;
    color: #fff;
    /*
    color: #1f1f1f;
    text-shadow: -1px 1px 0 #1F1F1F;
    text-shadow: 0 1px 1px #aaa;
    */
    color: #ccc;
    text-shadow: 0 1px -1px #111;
    display: block;
    text-decoration: none;
    float: left;
    cursor: pointer;
}
#modx-topnav li:hover a {
    color: #f2f2f2;
}
#modx-topnav ul.modx-subnav {
    -moz-border-radius: 0 0 5px 5px;
    -webkit-border-radius: 0 0 5px 5px;
    border-radius: 0 0 5px 5px;
    list-style: none;
    font-size: 12px;
    position: absolute;
    z-index: 23 !important;
    left: 0;
    top: 46px;
    background: #444;
    margin: 0;
    padding: 0;
    display: none;
    float: left;
    width: 225px;
    border: 1px solid #111;
}
#modx-topnav li:hover ul.modx-subnav {
    display: block;
}

#modx-topnav ul.modx-subnav li {
    margin: 0;
    padding: 0;
    border-top: 1px solid #444;
    border-bottom: 1px solid #252525;
    clear: both;
    width: 100%;
}
#modx-topnav ul.modx-subnav li a span {
    color: #AFAFAF;
    display: block;
    float: none;
    font-size: 12px;
    font-weight: normal;
    width: 100%;
    opacity: 0.9;
}
#modx-topnav li.active a {
    background: transparent url("../images/style/separator/menu_current.png") no-repeat scroll center bottom;
}

#modx-topnav li.active:hover a {
    background-image: none;
}

html #modx-topnav ul.modx-subnav li a {
    float: left;
    width: 205px;
    background-color: #333;
    padding: 5px 10px 6px;
}
html #modx-topnav ul.modx-subnav li a:hover {
    background-color: #222;
    text-shadow: 0;
}
html #modx-topnav ul.modx-subnav li a:hover{
    background-color: #5C7F17;
}
#modx-topnav ul.modx-subnav li a:hover span {
    color: #ffffff;
}
#modx-topnav ul.modx-subnav ul {
    display: none;
    border: 1px solid #252525;
    -moz-border-radius: 0 5px 5px 0;
    -webkit-border-radius: 0 5px 5px 0;
    border-radius: 0 5px 5px 0;
    position: absolute;
    left: 225px;
    top: 2px;
    list-style: none;
    padding-left: 0;
    z-index: 24;
}

#modx-topnav ul.modx-subnav ul li a {
    background-color: #3F3F3F;
}

#modx-topnav li ul.modx-subnav ul li {
    border-top: 1px solid #555;
    border-bottom: 1px solid #303030;
}

#modx-topnav ul.modx-subnav ul li:first-child,
#modx-topnav ul.modx-subnav ul li:first-child a {
    -moz-border-radius: 0 2px 0 0;
    -webkit-border-radius: 0 2px 0 0;
    border-radius: 0 2px 0 0;
}
#modx-topnav ul.modx-subnav ul li:last-child,
#modx-topnav ul.modx-subnav ul li:last-child a {
    -moz-border-radius: 0 0 2px 0;
    -webkit-border-radius: 0 0 2px 0;
    border-radius: 0 0 2px 0;
}
#modx-topnav ul.modx-subnav ul ul li:last-child,
#modx-topnav ul.modx-subnav ul ul li:last-child a {
    -moz-border-radius: 0 0 2px 2px;
    -webkit-border-radius: 0 0 2px 2px;
    border-radius: 0 0 2px 2px;
}
#modx-topnav ul.modx-subnav li:hover ul ul,
#modx-topnav ul.modx-subnav ul li:hover ul ul,
#modx-topnav ul.modx-subnav ul ul li:hover ul ul {
    display: none;
}
#modx-topnav ul.modx-subnav li:hover ul,
#modx-topnav ul.modx-subnav ul li:hover ul,
#modx-topnav ul.modx-subnav ul ul li:hover ul,
#modx-topnav ul.modx-subnav ul ul ul li:hover ul {
    display: block;
}


/* icons */
.icon-resource .x-tree-node-icon {background-image:url(../images/restyle/icons/page_white.png) !important;}

.icon-folder .x-tree-node-icon {background-image:url(../images/restyle/icons/folder_page_white.png) !important;}
.haschildren .x-tree-node-icon {background-image:url(../images/restyle/icons/folder.png) !important;}

.icon-chunk .x-tree-node-icon { background-image:url(../images/restyle/icons/chunk.png) !important; }
.icon-plugin .x-tree-node-icon { background-image:url(../images/restyle/icons/plugin.png) !important; }
/* ... */

